src/main/fabric8/std-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: "${project.artifactId}-svc"
  creationTimestamp:
  labels:
    app: "${project.artifactId}"
    provider: fabric8
    version: "${project.version}"
    group: "${project.groupId}"
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    component: "${project.artifactId}"
    deploymentconfig: "${project.artifactId}"
  selector:
    app: "${project.artifactId}"
    group: "${project.groupId}"
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
