src/main/fabric8/std-route.yml
---
apiVersion: v1
kind: Route
metadata:
  name: "${project.artifactId}-svc"
  creationTimestamp:
  labels:
    app: "${project.artifactId}"
    provider: fabric8
    version: "${project.version}"
    group: "${project.groupId}"
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
spec:
  to:
    kind: Service
    name: "${project.artifactId}-svc"
  port:
    targetPort: http
status: {}
