src/main/fabric8/topicview-route.yml
---
apiVersion: v1
kind: Route
metadata:
  name: "${project.artifactId}-topicview"
  creationTimestamp:
  labels:
    app: "${project.artifactId}"
    provider: fabric8
    version: "${project.version}"
    group: "${project.groupId}"
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
spec:
  host: camel-kafka-vr-strimzi.app.88.198.65.4.nip.io
  path: "/topicview.html"
  to:
    kind: Service
    name: "${project.artifactId}"
  port:
    targetPort: http-svc-tcp
status: {}
